[gd_scene load_steps=13 format=2]

[ext_resource path="res://images/enemies/wheaty/leaf_center.png" type="Texture" id=1]
[ext_resource path="res://images/enemies/wheaty/hand.png" type="Texture" id=2]
[ext_resource path="res://images/enemies/wheaty/leaf_left.png" type="Texture" id=3]
[ext_resource path="res://images/enemies/wheaty/leaf_right.png" type="Texture" id=4]
[ext_resource path="res://images/enemies/wheaty/body.png" type="Texture" id=5]
[ext_resource path="res://scripts/overworld/enemies/enemy_animations/animated_wheaty.gd" type="Script" id=6]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("body_sprite/hand_right:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -15.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body_sprite/hand_left:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("body_sprite/hand_right:rotation_degrees")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -15.0, -15.0, 30.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body_sprite/hand_left:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 15.0, -15.0 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("body_sprite/leaf_left:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body_sprite/leaf_center:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("body_sprite/leaf_right:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("body_sprite/leaf_left:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 15.0, -30.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body_sprite/leaf_center:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.9, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 15.0, -30.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("body_sprite/leaf_right:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -30.0, 45.0 ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("body_sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "idle"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("body_sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -5 ) ]
}

[node name="animated_wheaty" type="Node2D"]
script = ExtResource( 6 )

[node name="body_sprite" type="Sprite" parent="."]
texture = ExtResource( 5 )

[node name="leaf_left" type="Sprite" parent="body_sprite"]
position = Vector2( -14, -54 )
texture = ExtResource( 3 )
offset = Vector2( -22, -18 )

[node name="leaf_center" type="Sprite" parent="body_sprite"]
position = Vector2( 2, -60 )
texture = ExtResource( 1 )
offset = Vector2( 38, -30 )

[node name="leaf_right" type="Sprite" parent="body_sprite"]
position = Vector2( 22, -49 )
texture = ExtResource( 4 )
offset = Vector2( 14, -6 )

[node name="hand_left" type="Sprite" parent="body_sprite"]
show_behind_parent = true
position = Vector2( -26, 0 )
texture = ExtResource( 2 )
offset = Vector2( -24, -2 )
flip_h = true

[node name="hand_right" type="Sprite" parent="body_sprite"]
show_behind_parent = true
position = Vector2( 32, 0 )
rotation = -0.261799
texture = ExtResource( 2 )
offset = Vector2( 20, -2 )

[node name="anim_hands" type="AnimationPlayer" parent="."]
autoplay = "idle"
playback_speed = 0.4
anims/RESET = SubResource( 1 )
anims/idle = SubResource( 2 )

[node name="anim_leaf" type="AnimationPlayer" parent="."]
autoplay = "idle"
playback_speed = 0.3
anims/RESET = SubResource( 3 )
anims/idle = SubResource( 4 )

[node name="anim_body" type="AnimationPlayer" parent="."]
playback_speed = 0.7
anims/RESET = SubResource( 5 )
anims/idle = SubResource( 6 )
